# timetemp3

./: .gitignore  LICENSE.txt  README.md  TODO.org  pyproject.toml  setup.cfg  setup.py
conf/: clock7seg-config.example.json  install_services.sh  phant-config.example.json  weather_logging_config.example.json
etc/: timetemp_7segment_clock.service  timetemp_weather_logging.service
timetemp3/: __init__.py  constants.py  datalogging.py  datalogging_config.py  my_7segment_clock.py  my_weather_logging.py  temperature.py  time.py
timetemp3/tests/: TODO.org  test_temperature.py
