
[metadata]
name = timetemp3
description = Display time/temperature on Raspberry Pi and log to cloud
version=get_version("timetemp3/__init__.py"),
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/idcrook/timetemp3
author = David Crook
author_email = idcrook@users.noreply.github.com
license = MIT
license_file = LICENSE.txt
classifiers =
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: POSIX :: Linux",
        "Natural Language :: English",
        "Topic :: Home Automation",
        "Topic :: System :: Hardware",
        "Topic :: System :: Logging",
        "Topic :: System :: Monitoring",
        "Environment :: Console"

project_urls =
#    Documentation = https://screed.readthedocs.io
    Source = https://github.com/idcrook/timetemp3
    Tracker = https://github.com/idcrook/timetemp3/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
        python-nest>=4.2.0
        Adafruit_BMP @ git+https://github.com/adafruit/Adafruit_Python_BMP.git@1.5.4
        Adafruit_LED_Backpack @ git+https://github.com/adafruit/Adafruit_Python_LED_Backpack.git@master
        phant3 @ git+https://github.com/idcrook/python3-phant.git@main
        pyowm @ git+https://github.com/csparpa/pyowm.git@3.3.0
python_requires = >=3.7
# setup_requires =
#     setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
                timetemp_7segment_clock=timetemp3.my_7segment_clock:main
                timetemp_weather_logging=timetemp3.my_weather_logging:main

[options.packages.find]
exclude =
    etc*
    conf*
    docs*
    timetemp3.tests*

# test_suite='nose.collector',
#     tests_require=['nose'],

# [options.extras_require]
# test =
#     pytest >= 6.2.2
#     pycodestyle
#     pytest-cov
# all =
#     %(test)s
